--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>First Node Project</title>
+    <title>First Node Project1</title>
     <%- include("partials/head") %>
   </head>
   <body>
